<?xml version="1.0"?>
<package>
  <name>ros_tf_tuner</name>
  <version>0.1.0</version>
  <description>Node for publishing a tf transform with dynamic 
               reconfigure to modify its parameters.</description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>
  <license>MIT licence</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>

</package>
